# scalelink

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  README.md  conftest.py  pyproject.toml  pytest.ini  setup.cfg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: increment_version_workflow.yaml  pull_request_workflow.yaml
docs/: CONTRIBUTING.md  branch_and_deploy_guide.md
scalelink/indicator_matrix/: functions.py
tests/indicator_matrix/: test_functions.py
