[metadata]
name = scalelink
version = attr: scalelink.__version__
author = Data Linkage team, Methodology & Quality Directorate, Office for National Statistics
author_email = datalinkage@ons.gov.uk
description = A Python and PySpark implementation of the Scalelink method of data linkage by Goldstein et al.
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8, <3.11
include_package_data = True
install_requires =
    pandas

[options.packages.find]
where = .
include = scalelink*

[options.extras_require]
dev =
    black >=24.4.2
    bump2version >=1.0.0
    chispa >=0.9.2
    isort >=5.13.2
    pre-commit >=2.6.0
    pyspark ==3.5.1
    pytest >=7.1.0, <8.0.0 # Temporarily pin pytest due to https://github.com/TvoroG/pytest-lazy-fixture/issues/65
    pytest-cov >=4.0.0
    ruff >=0.0.270

[tool.isort]
profile = "black"
known_local_folder = "scalelink"
skip = [".gitignore"]
